--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@{electron-app}/app",
+	"name": "@example-name/app",
 	"version": "0.0.8",
 	"description": "electron-app app",
 	"main": "./lib/index.js",
@@ -19,13 +19,13 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+{electron-app-git-url}.git"
+		"url": "git+https://github.com/enncy/electron-quickly-start.git"
 	},
 	"keywords": [],
 	"author": "you",
 	"license": "MIT",
 	"bugs": {
-		"url": "{electron-app-git-url}/issues"
+		"url": "https://github.com/enncy/electron-quickly-start/issues"
 	},
-	"homepage": "{electron-app-git-url}#readme"
+	"homepage": "https://github.com/enncy/electron-quickly-start#readme"
 }
