--- a/package.json
+++ b/package.json
@@ -1,57 +1,31 @@
 {
-	"name": "{electron-app}",
-	"version": "0.0.8",
-	"description": "electron-app",
-	"files": [
-		"lib",
-		"dist"
-	],
+	"name": "eqs-cli",
+	"version": "0.0.1",
+	"description": "cli of eqs",
+	"main": "index.js",
 	"scripts": {
-		"build": "npm run tsc && gulp -f ./scripts/build-app.js",
-		"release": "sh ./scripts/release.sh",
-		"changelog": "conventional-changelog -p angular -i CHANGELOG.md --same-file -r 0",
-		"changelog:current": "conventional-changelog -p angular -o CHANGELOG_CURRENT.md -r 1",
-		"tsc": "pnpm lint && gulp -f ./scripts/tsc.js",
-		"lint": "pnpm format && eslint  ./packages --ext .ts,.tsx,.js,.jsx,.vue --fix",
-		"format": "prettier -c ./.prettierrc.json  **/*.ts  **/*.js **/*.vue **/*.css  --write",
-		"init-commitizen": "commitizen init cz-conventional-changelog --save --save-exact"
+		"build": "tsc"
 	},
-	"devDependencies": {
-		"@html-eslint/eslint-plugin": "^0.15.0",
-		"@types/node": "^17.0.16",
-		"@typescript-eslint/eslint-plugin": "^5.19.0",
-		"@typescript-eslint/parser": "^5.19.0",
-		"conventional-changelog-cli": "^2.2.2",
-		"cz-conventional-changelog": "^3.3.0",
-		"del": "^6.0.0",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-config-standard": "^16.0.3",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-vue": "^9.8.0",
-		"gulp": "^4.0.2",
-		"gulp-cli": "^2.3.0",
-		"gulp-zip": "^5.1.0",
-		"prettier": "^2.8.8",
-		"typescript": "^4.5.5"
+	"files": [
+		"index.js",
+		"template"
+	],
+	"keywords": [
+		"cli","electron"
+	],
+	"bin": {
+		"init": "./index.js"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+{electron-app-git-url}.git"
-	},
-	"keywords": [],
 	"author": "enncy",
 	"license": "MIT",
-	"bugs": {
-		"url": "{electron-app-git-url}/issues"
+	"dependencies": {
+		"prompts": "^2.4.2"
 	},
-	"homepage": "{electron-app-git-url}#readme",
-	"config": {
-		"commitizen": {
-			"path": "./node_modules/cz-conventional-changelog"
-		}
+	"devDependencies": {
+		"typescript": "^5.3.3",
+		"@types/prompts": "^2.4.9"
+	},
+	"publishConfig": {
+		"access": "public"
 	}
 }
