--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -1,16 +1,24 @@
 {
-	"eslint.validate": ["javascript", "javascriptreact"],
+	"eslint.validate": ["javascript", "javascriptreact", "vue"],
 	"editor.formatOnSave": true,
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": "explicit"
 	},
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	/** 样式自动生成 */
+	"less.compile": {
+		"compress": false,
+		"sourceMap": false,
+		"out": "../css/"
+	},
+	/** 鼠标中键代码缩进 */
 	"editor.mouseWheelZoom": true,
+	/** 鼠标滚动速度 */
 	"editor.mouseWheelScrollSensitivity": 2,
+	/** 不生成 @return 的 jsdoc */
 	"typescript.suggest.jsdoc.generateReturns": false,
 	"[typescript]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
-	"task.allowAutomaticTasks": "on",
 	"editor.wordBasedSuggestions": "off"
 }
