--- a/template/packages/web/package.json
+++ b/template/packages/web/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@{electron-app}/web",
+	"name": "web",
 	"version": "0.0.1",
-	"description": "electron-app web",
+	"description": "web of electron-app",
 	"scripts": {
 		"dev": "vite --port 3000",
 		"build": "vue-tsc --noEmit && vite build --emptyOutDir",
@@ -24,16 +24,7 @@
 		"vite": "^3.2.6",
 		"vite-plugin-commonjs": "^0.6.1",
 		"vue-tsc": "^1.0.24"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+{electron-app-git-url}.git"
-	},
+	}, 
 	"keywords": [],
-	"author": "you",
-	"license": "MIT",
-	"bugs": {
-		"url": "{electron-app-git-url}/issues"
-	},
-	"homepage": "{electron-app-git-url}#readme"
+	"author": "you"
 }
