--- a/template/package.json
+++ b/template/package.json
@@ -8,8 +8,8 @@
 	],
 	"scripts": {
 		"build": "npm run tsc && gulp -f ./scripts/build-app.js",
-		"dev:app":"cd ./packages/app && npm run dev",
-		"dev:web":"cd ./packages/web && npm run dev",
+		"dev:app": "cd ./packages/app && npm run dev",
+		"dev:web": "cd ./packages/web && npm run dev",
 		"release": "sh ./scripts/release.sh",
 		"changelog": "conventional-changelog -p angular -i CHANGELOG.md --same-file -r 0",
 		"changelog:current": "conventional-changelog -p angular -o CHANGELOG_CURRENT.md -r 1",
@@ -38,6 +38,7 @@
 		"gulp-cli": "^2.3.0",
 		"gulp-zip": "^5.1.0",
 		"prettier": "^2.8.8",
+		"rimraf": "^5.0.5",
 		"typescript": "^4.5.5"
 	},
 	"keywords": [],
